# RomanNumerals-Kata-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  Roman.cpp  Roman.h
test/: CMakeLists.txt  RomanUnitTests.cpp
